# Planteur

./: .gitignore  82-ti-launchpad.rules  83-ftdi-usb.rules  LICENSE  README.md  app.py  config.json  database.py  database_storer.py  monitoring.py  plant.py  plants.json  run_pylint.bash  sql_test.py  watering.py
launchpad/: 42-ti-launchpad.rules  CMakeLists.txt  Makefile  README.md  alias.bash  button.cpp  button.hpp  command.gdb  debug.bash.notworking  delay.hpp  demo.cpp  erase.bash  lcd.cpp  lcd.hpp  led.cpp  led.hpp  main.c  main.cpp  msp430-elf.cmake  msp430-project.doxyfile  program.bash  run_mspdebug.bash  system.hpp  test_xbee.cpp  test_xbee_intense.cpp  uart.cpp  uart.hpp  xbee.cpp  xbee.hpp
planteur/: adapters.py  app.py  config.json  database.py  main.py  message_ambient._template.json  message_plant_template.json  messaging.py  monitoring.py  notes.txt  plant.py  plants.json  plants.json.template  test_messaging.py  validation.txt  watering.py  xbee_test.py
planteur/validation/: config.json  validation.bash  validation.txt
validation/: config.json  network_expected.txt  network_plants.json  network_plants.py  validation.bash  xbee_expected.txt  xbee_plants.json
